@startuml
!theme plain
hide circle
skinparam linetype ortho

entity "users" {
  * <color:gray><i>user_id</i></color> : INT <<PK>>
  --
  * <color:gray>google_id</color> : VARCHAR(255) <<UNIQUE>>
  * name : VARCHAR(255)
  * <color:gray>email</color> : VARCHAR(255) <<UNIQUE>>
  avatar : VARCHAR(255)
  role : VARCHAR(20)
  jules_api_key : VARCHAR(255)
  telegram_bot_token : VARCHAR(255)
  telegram_bot_name : VARCHAR(255)
  telegram_webhook_secret : VARCHAR(255)
  telegram_link_token : VARCHAR(255) <<UNIQUE>>
  jules_quota_usage : INT
  jules_quota_limit : INT
  jules_quota_updated_at : DATETIME
  created_at : TIMESTAMP
}

entity "user_github_accounts" {
  * <color:gray><i>github_account_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray>github_username</color> : VARCHAR(255)
  * github_token : VARCHAR(255)
  created_at : TIMESTAMP
}

entity "projects" {
  * <color:gray><i>project_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray><i>github_account_id</i></color> : INT <<FK>>
  * <color:gray>github_repo</color> : VARCHAR(255)
  webhook_secret : VARCHAR(255)
  roadmap_data : TEXT
  roadmap_updated_at : TIMESTAMP
  created_at : TIMESTAMP
}

entity "tasks" {
  * <color:gray><i>task_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray><i>project_id</i></color> : INT <<FK>>
  * <color:gray>issue_number</color> : INT
  * title : VARCHAR(255)
  body : TEXT
  status : VARCHAR(50)
  github_data : JSON
  agent_response : TEXT
  jules_session_id : VARCHAR(255)
  jules_status : VARCHAR(255)
  jules_url : VARCHAR(255)
  pr_url : VARCHAR(255)
  github_state : VARCHAR(20)
  github_pr_data : TEXT
  github_comments_data : TEXT
  github_data_updated_at : TIMESTAMP
  last_synced_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "task_logs" {
  * <color:gray><i>task_log_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray><i>task_id</i></color> : INT <<FK>>
  level : VARCHAR(20)
  * message : TEXT
  created_at : TIMESTAMP
}

entity "rate_limits" {
  * <color:gray>rate_key</color> : VARCHAR(255) <<PK>>
  --
  request_count : INT
  * reset_at : TIMESTAMP
}

entity "user_telegram_accounts" {
  * <color:gray><i>telegram_account_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray>telegram_chat_id</color> : BIGINT <<UNIQUE>>
  created_at : TIMESTAMP
}

entity "issue_templates" {
  * <color:gray><i>issue_template_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray>name</color> : VARCHAR(255)
  * title_template : VARCHAR(255)
  body_template : TEXT
  parameter_config : TEXT
  created_at : TIMESTAMP
}

entity "notifications" {
  * <color:gray><i>notification_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  * <color:gray><i>project_id</i></color> : INT <<FK>>
  type : VARCHAR(50)
  title : VARCHAR(255)
  message : TEXT
  data : JSON
  is_read : BOOLEAN
  created_at : TIMESTAMP
}

entity "user_notification_settings" {
  * <color:gray><i>user_id</i></color> : INT <<PK>> <<FK>>
  * <color:gray>channel</color> : VARCHAR(20) <<PK>>
  --
  is_enabled : BOOLEAN
}

entity "user_event_notification_settings" {
  * <color:gray><i>user_id</i></color> : INT <<PK>> <<FK>>
  * <color:gray>notification_type</color> : VARCHAR(50) <<PK>>
  --
  is_enabled : BOOLEAN
}

entity "project_notification_settings" {
  * <color:gray><i>project_id</i></color> : INT <<PK>> <<FK>>
  * <color:gray>notification_type</color> : VARCHAR(50) <<PK>>
  --
  is_enabled : BOOLEAN
}

entity "task_notification_settings" {
  * <color:gray><i>task_id</i></color> : INT <<PK>> <<FK>>
  --
  is_muted : BOOLEAN
}

entity "project_status_notification_settings" {
  * <color:gray><i>project_id</i></color> : INT <<PK>> <<FK>>
  * <color:gray>status</color> : VARCHAR(50) <<PK>>
  --
  is_enabled : BOOLEAN
}

entity "webhook_logs" {
  * <color:gray><i>log_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  endpoint : VARCHAR(50)
  payload : TEXT
  headers : TEXT
  status_code : INT
  error_message : TEXT
  created_at : TIMESTAMP
}

entity "performance_logs" {
  * <color:gray><i>performance_log_id</i></color> : INT <<PK>>
  --
  * <color:gray><i>user_id</i></color> : INT <<FK>>
  type : VARCHAR(50)
  target : TEXT
  duration : FLOAT
  context : JSON
  status_code : INT
  error_message : TEXT
  created_at : TIMESTAMP
}

users ||--o{ user_github_accounts : "user_id"
users ||--o{ projects : "user_id"
users ||--o{ tasks : "user_id"
users ||--o{ task_logs : "user_id"
users ||--o{ user_telegram_accounts : "user_id"
users ||--o{ issue_templates : "user_id"
users ||--o{ notifications : "user_id"
users ||--o{ user_notification_settings : "user_id"
users ||--o{ user_event_notification_settings : "user_id"
users ||--o{ webhook_logs : "user_id"
users ||--o{ performance_logs : "user_id"
user_github_accounts ||--o{ projects : "github_account_id"
projects ||--o{ tasks : "project_id"
projects ||--o{ notifications : "project_id"
projects ||--o{ project_notification_settings : "project_id"
projects ||--o{ project_status_notification_settings : "project_id"
tasks ||--o{ task_logs : "task_id"
tasks ||--o| task_notification_settings : "task_id"

@enduml
